fix overflow x

--- a/styles.css
+++ b/styles.css
@@ -129,7 +129,8 @@ header h3 {
 
 @media screen and (max-width: 900px) {
   body {
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   header .logo,
